<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="10"
    tools:ignore="NestedWeights" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#403D3D"
        android:orientation="horizontal"
        android:weightSum="4" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/icon" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/user_sel_" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:weightSum="10" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/create_new_user"
                android:textColor="#085335"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="8"
                android:background="@drawable/layout_border"
                android:orientation="vertical"
                android:weightSum="7" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2" >

                    <EditText
                        android:id="@+id/fname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/user_reg"
                        android:drawablePadding="5dp"
                        android:hint="@string/fname"
                        android:maxLength="12"
                        android:inputType="textPersonName|textCapWords"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/lname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/user_reg"
                        android:drawablePadding="5dp"
                        android:hint="@string/lname"
                        android:maxLength="12"
                        android:inputType="textPersonName|textCapWords"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/age"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/bday"
                        android:drawablePadding="5dp"
                        android:hint="@string/age"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/sex"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/gender"
                        android:drawablePadding="5dp"
                        android:focusableInTouchMode="false"
                        android:hint="@string/sex"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/mailid"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/email"
                        android:drawablePadding="5dp"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailAddress"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/postal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/address"
                        android:drawablePadding="5dp"
                        android:hint="@string/postal_address"
                        android:singleLine="true"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/password"
                        android:drawablePadding="5dp"
                        android:focusableInTouchMode="false"
                        android:hint="@string/usertype"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/save"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/submit" />

                    <Button
                        android:id="@+id/cancel"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/cancel" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>