<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="10"
    tools:ignore="NestedWeights" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#403D3D"
        android:orientation="horizontal"
        android:weightSum="4" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/icon" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/act_sel" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:weightSum="10" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/add_bank_account"
                android:textColor="#085335"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="8"
                android:background="@drawable/layout_border"
                android:orientation="vertical"
                android:weightSum="8" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/et_num"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/act_num"
                        android:drawablePadding="5dp"
                        android:hint="@string/act_no"
                        android:inputType="number"
						android:maxLength="18"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/user_reg"
                        android:drawablePadding="5dp"
                        android:hint="@string/act_holder"
                        android:maxLength="15"
                        android:inputType="textPersonName|textCapWords"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/et_type"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/act_type"
                        android:drawablePadding="5dp"
                        android:hint="@string/act_type"
                        android:maxLength="12"
                        android:inputType="textPersonName|textCapWords"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/et_ifsc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/address"
                        android:drawablePadding="5dp"
                        android:hint="@string/ifsc"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/et_bname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/bank"
                        android:drawablePadding="5dp"
                        android:maxLength="20"
                        android:hint="@string/bank_name"
                        android:inputType="textPersonName|textCapWords"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/et_blnc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/rupees"
                        android:drawablePadding="5dp"
                        android:hint="@string/initial_blnc"
                        android:inputType="number"
                        android:maxLength="8"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/add"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/submit" />

                    <Button
                        android:id="@+id/cancel"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/cancel" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>