<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#403D3D"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/users"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/user_sel_" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:text="@string/add_users" />

    <ListView
        android:id="@+id/userList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp"
        android:divider="@color/list_divider"
        android:dividerHeight="5.0sp"
        android:drawSelectorOnTop="false"
        android:listSelector="@drawable/list_row_selector" />

</LinearLayout>