<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/list_background_pressed"
        android:orientation="horizontal"
        android:padding="10dp"
        android:paddingLeft="20dp" >

        <TextView
            android:id="@+id/req_date"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true" >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:background="#b4c0c8"
                android:padding="10dp" >

                <TextView
                    android:layout_gravity="center_vertical"
                    android:text="@string/source_bank_"
                    android:textColor="#333333"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_fbank"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:textColor="#333333"
                    android:textSize="15sp" >
                </TextView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:background="#d8d8d8"
                android:padding="10dp" >

                <TextView
                    android:layout_gravity="center_vertical"
                    android:text="@string/destination_bank_"
                    android:textColor="#333333"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_dbank"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:textColor="#333333"
                    android:textSize="15sp" >
                </TextView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:background="#b4c0c8"
                android:padding="10dp" >

                <TextView
                    android:layout_gravity="center_vertical"
                    android:text="Transfer Amount "
                    android:textColor="#333333"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_amt"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:textColor="#333333"
                    android:textSize="15sp" >
                </TextView>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:background="#d8d8d8"
                android:padding="10dp" >

                <TextView
                    android:layout_gravity="center_vertical"
                    android:text="@string/payment_type"
                    android:textColor="#333333"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_type"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:textColor="#333333"
                    android:textSize="15sp" >
                </TextView>
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>